--- a/project_03/src/input.css
+++ b/project_03/src/input.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 @import "tailwindcss";
 
 @utility bg-tennis {
   background-image: url("../assets/bg.png");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+}
+
+@theme {
+  --font-quick: "Quicksand", sans-serif;
 }
